Fix alignment

--- a/style.css
+++ b/style.css
@@ -229,11 +229,9 @@ a {
 
 .carousel {
     position: relative;
-    max-width: 600px; /* Adjust the width as needed */
-    height: 400px; /* Adjust the height as needed */
+    max-width: 600px; /* Your desired max width */
+    height: 400px; /* Your desired height */
     overflow: hidden;
-    text-align: center;
-    margin: auto;
   }
   
   .slide {
@@ -243,14 +241,14 @@ a {
     position: absolute;
   }
   
+  .slide.active {
+    display: block;
+  }
+  
   .slide img {
     width: 100%;
     height: 100%;
-    object-fit: contain; /* This will ensure the image fits the container while maintaining aspect ratio */
-  }
-  
-  .slide.active {
-    display: block;
+    object-fit: contain;
   }
   
   .indicators {
